--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.6.3",
     "node-sass": "^4.12.0",
+    "react-bootstrap-toggle": "^2.3.2",
+    "react-ios-switch": "^0.1.19",
     "react-router-dom": "^5.0.1"
   }
 }
