--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "bootswatch": "^4.3.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "node-sass": "^4.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-brands-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
