--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootswatch": "^4.3.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.6",
