--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.3",
     "node-sass": "^4.12.0",
+    "nodemailer": "^6.2.1",
     "react-bootstrap-toggle": "^2.3.2",
     "react-ios-switch": "^0.1.19",
     "react-router-dom": "^5.0.1"
