--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "aws-sdk": "^2.501.0",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.3",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.12.0",
     "nodemailer": "^6.2.1",
+    "path": "^0.12.7",
     "react-bootstrap-toggle": "^2.3.2",
     "react-ios-switch": "^0.1.19",
     "react-router-dom": "^5.0.1"
