--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules
-build
+/build
 .env
+.DS_Store
+client/.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
